# investor-dashboard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  render.yaml  tasks.ps1
.github/workflows/: pages.yml
scripts/: build_static.py
src/dashboard/: __init__.py  __main__.py  app.py  charts.py  config.py  dependencies.py  formatting.py  logging_setup.py
src/dashboard/data_sources/: __init__.py  _discovery.py  _http.py  base.py  cache.py  cboe.py  cftc.py  cnn.py  coingecko.py  computed.py  ecb.py  fallback.py  fred.py  naaim.py  shiller.py  stooq.py  yahoo.py
src/dashboard/indicators/: __init__.py  manifest.yaml  models.py  registry.py  service.py  stats.py
src/dashboard/routes/: __init__.py  api.py  pages.py
src/dashboard/static/: style.css
src/dashboard/templates/: _card.html  _grid.html  base.html  dashboard.html  indicator.html
tests/: conftest.py  test_cache.py  test_data_sources_cftc.py  test_data_sources_cnn.py  test_data_sources_coingecko.py  test_data_sources_computed.py  test_data_sources_ecb.py  test_data_sources_fallback.py  test_data_sources_fred.py  test_data_sources_naaim.py  test_data_sources_shiller.py  test_data_sources_stooq.py  test_data_sources_yahoo.py  test_formatting.py  test_registry.py  test_routes.py  test_service.py  test_stats.py
tests/fixtures/: cftc_sp500.json  cnn_graphdata.json  coingecko_bitcoin.json  fred_dgs10.json  stooq_spx.csv  yahoo_gspc.json
