[project]
name = "investor-dashboard"
version = "0.1.0"
description = "Lokales Web-Dashboard mit den wichtigsten Marktindikatoren, statistisch eingeordnet und didaktisch erklaert."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "markupsafe>=2.1",
    "httpx>=0.27",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "plotly>=5.24",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "pyyaml>=6.0",
    "structlog>=24.4",
    "python-multipart>=0.0.12",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "types-pyyaml>=6.0",
    "pandas-stubs>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF", "PL"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["dashboard"]
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["plotly.*", "yaml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning:starlette.testclient",
    "ignore:Using `httpx` with `starlette.testclient`:UserWarning",
]

[tool.coverage.run]
source = ["src/dashboard"]
omit = ["*/__main__.py"]
